# OFdevelopForLearing

./: CMakeLists.txt  README.md
MixedBCforDry/: wallEvaCoupledMixed.C  wallEvaCoupledMixed.H
MixedBCforDry/Make/: files
MultiFoam/: CMakeLists.txt  kernelPhaseChangeFOAM.C
MultiFoam/Make/: files
MultiFoam/fluid/: createFluidFields.H  solveFluid.H
MultiFoam/solid/: createSolidFields.H  setRegionSolidFields.H  solveSolid.H  updateSolidFields.H
newBC/: CMakeLists.txt  massTransferCoupledFvPatchScalarField.C  massTransferCoupledFvPatchScalarField.H
newBC/Make/: files  options
testcase/rice_2D/: README.md  runMesh.sh
testcase/rice_2D/0/fluid/: AIR  H2O  T  U  Ydefault  alphat  epsilon  k  nut  p  p_rgh
testcase/rice_2D/0/kernel/: H2O  T  p
testcase/rice_2D/constant/: g
testcase/rice_2D/constant/fluid/: boundary  reactions  thermo.compressibleGas  turbulenceProperties
testcase/rice_2D/constant/kernel/: SolidProperties  boundary  thermophysicalProperties
testcase/rice_2D/constant/triSurface/: kernel.stl
testcase/rice_2D/system/: blockMeshDict  controlDict  extrudeMeshDict  meshQualityDict  snappyHexMeshDict  solverInfo  topoSetDict
testcase/rice_2D/system/fluid/: fvSolution
testcase/rice_2D/system/kernel/: fvSchemes  fvSolution
testcase/rice_3D/: Allrun  README.md  cleanMesh.sh  run.sh  runMesh.sh
testcase/rice_3D/0/fluid/: AIR  H2O  T  U  Ydefault  alphat  epsilon  k  nut  p  p_rgh
testcase/rice_3D/0/hull/: H2O  T  p
testcase/rice_3D/constant/: cellToRegion  regionProperties
testcase/rice_3D/constant/fluid/: chemistryProperties  combustionProperties
testcase/rice_3D/constant/fluid/polyMesh/: boundary  boundaryRegionAddressing  cellRegionAddressing  cellZones  faceRegionAddressing  faceZones  neighbour  owner  pointRegionAddressing  points
testcase/rice_3D/constant/fluid/polyMesh/sets/: fth  nonOrthoFaces
testcase/rice_3D/constant/hull/: SolidProperties  thermophysicalProperties
testcase/rice_3D/constant/hull/polyMesh/: boundary  boundaryRegionAddressing  cellRegionAddressing  cellZones  faceRegionAddressing  faceZones  faces  neighbour  owner  pointRegionAddressing  pointZones  points
testcase/rice_3D/constant/hull/polyMesh/sets/: bran  c1  c2  endosperm  htf
testcase/rice_3D/constant/polyMesh/: boundary  cellLevel  cellZones  faceZones  level0Edge  neighbour  owner  pointLevel  surfaceIndex
testcase/rice_3D/constant/polyMesh/sets/: addedCells  layerFaces
testcase/rice_3D/constant/triSurface/: rice_bran.stl  rice_endosperm.stl  rice_hull.stl
testcase/rice_3D/system/: blockMeshDict  controlDict  decomposeParDict  fvSolution  snappyHexMeshDict  topoSetDict
testcase/rice_3D/system/fluid/: decomposeParDict  fvSchemes  fvSolution  topoSetDict
testcase/rice_3D/system/hull/: decomposeParDict  fvSolution  topoSetDict
testcase/sphere/: README.md  cleanMesh.sh  runMesh.sh
testcase/sphere/0/: cellLevel  cellToRegion  nSurfaceLayers  pointLevel  thickness  thicknessFraction
testcase/sphere/0/fluid/: AIR  H2O  T  U  Ydefault  alphat  cellLevel  cellToRegion  epsilon  k  nSurfaceLayers  nut  p  p_rgh  thickness  thicknessFraction
testcase/sphere/0/kernel/: H2O  T  cellLevel  cellToRegion  nSurfaceLayers  p  thickness  thicknessFraction
testcase/sphere/constant/: cellToRegion  regionProperties
testcase/sphere/constant/fluid/: chemistryProperties  reactions  thermo.compressibleGas  thermophysicalProperties  transportProperties  turbulenceProperties
testcase/sphere/constant/kernel/: SolidProperties  thermophysicalProperties  transportThings
testcase/sphere/system/: blockMeshDict  controlDict  fvSolution  meshQualityDict  snappyHexMeshDict
testcase/sphere/system/fluid/: fvSchemes  fvSolution
testcase/sphere/system/kernel/: fvSchemes  fvSolution
